  Same for FSetWeakInterface and FMap(Weak)Interface. 
- Some changes in Reals: lemmas on prod_f_SO is now on prod_f_R0, most
  statement in "sigT" (including the completeness axiom) are now in "sig" (in
  case of incompatibility, use sigT_of_sig or sig_of_sigT), identifiers in 
  French moved to English, useless hypothesis of ln_exists1 dropped, new
  Rlogic.v states a few logical properties about R axioms.
- Slight restructuration of the Logic library regarding choice and classical
  logic. Addition of files providing intuitionistic axiomatizations of
  descriptions: Epsilon.v, Description.v and IndefiniteDescription.v

Language

- Sort of Record/Structure, Inductive and CoInductive defaults to Type
  if omitted
- Record/Structure now usable for defining coinductive types
  (e.g. "Record stream := { hd : nat; tl : stream }.")

Notations and implicit arguments

- New options "Set Maximal Implicit Insertion", "Set Reversible Pattern
  Implicit", "Set Strongly Strict Implicit" and "Set Printing Implicit
  Defensive" for controlling inference and use of implicit arguments.
- New modifiers in "Implicit Arguments" to force an implicit argument to
  be maximally inserted and/or forced if it is not seen as inferable.
- New modifier of "Implicit Arguments" to enrich the set of implicit arguments.
- Level "constr" moved from 9 to 8.
- Structure/Record now printed as Record (unless option Printing All is set).
- Support for parametric notations defining constants (i.e. abbreviations).

Tactic Language

- Second-order pattern-matching now working in Ltac "match" clauses
  (syntax for second-order unification variable is "@?X").
- Ltac accepts integer arguments (syntax is "ltac:nnn" for nnn an integer)
- The general sequence tactical "expr_0 ; [ expr_1 | ... | expr_n ]"
  is extended so that at most one expr_i may have the form "expr .."
  or just "..". Also, n can be different from the number of subgoals
  generated by expr_0. In this case, the value of expr (or idtac in