@@ -338,3 +338,6 @@ val tclABSTRACT : identifier option -> tactic -> tactic
 val admit_as_an_axiom : tactic
 
 val abstract_generalize : identifier -> tactic
+
+val register_general_multi_rewrite : 
+  (bool -> evars_flag -> constr with_ebindings -> clause -> tactic) -> unit
